--- a/fly.toml
+++ b/fly.toml
@@ -18,7 +18,7 @@ processes = []
   LOG_STDERR_FORMATTER = "Monolog\\Formatter\\JsonFormatter"
   APP_URL = "https://ototubu.fly.dev"
   APP_NAME = "ototubu"
-  APP_DEBUG = true
+  APP_DEBUG = false
   DB_CONNECTION = "pgsql"
   DB_HOST = "db.qozkjbejnagrddmhiapt.supabase.co"
   DB_PORT = 5432
